# deltakit

./: .gitignore  .pre-commit-config.yaml  .pydoclint_baseline.txt  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  README.md  licenses.confluence  pyproject.toml  ruff.toml
deltakit-explorer/: pyproject.toml
deltakit-explorer/src/deltakit_explorer/_api/: _api_client.py  _api_v2_client.py  _client.py  _gql_client.py
deltakit-explorer/src/deltakit_explorer/_utils/: _decorators.py
deltakit-explorer/src/deltakit_explorer/analysis/: __init__.py  _analysis.py  _lambda.py  _leppr.py
deltakit-explorer/src/deltakit_explorer/analysis/error_budget/: __init__.py  _budget.py  _discretisation.py  _generation.py  _gradient.py  _lambda.py  _memory.py  _parameters.py  _post_processing.py  _rounds.py  _visualisation.py
deltakit-explorer/src/deltakit_explorer/codes/: _bivariate_bicycle_code.py  _logicals.py  _repetition_code.py
deltakit-explorer/src/deltakit_explorer/codes/_css/: _css_code.py  _css_code_experiment_circuit.py  _css_stage.py  _detectors.py  _stabiliser_code.py  _stabiliser_helper_functions.py
deltakit-explorer/src/deltakit_explorer/codes/_planar_code/: __init__.py  (+4 more)
deltakit-explorer/src/deltakit_explorer/data/: _converter.py  _data_analysis.py
deltakit-explorer/src/deltakit_explorer/plotting/: __init__.py  _correlation_matrix.py  _draw.py  _lambda.py  _leppr.py  _visualisation.py  plotting.py  results.py
deltakit-explorer/src/deltakit_explorer/qpu/: _native_gate_set.py  _qpu.py
deltakit-explorer/src/deltakit_explorer/simulation/: _stim_simulation.py
deltakit-explorer/src/deltakit_explorer/types/: _data_string.py  _experiment_types.py  _types.py
deltakit-explorer/tests/: conftest.py
deltakit-explorer/tests/analysis/: test_lambda.py  test_leppr.py  test_quops.py
deltakit-explorer/tests/analysis/budget/: test_discretisation.py  test_generation.py  test_gradient.py  test_post_processing.py
deltakit-explorer/tests/circuit_generation/: test_circuit_generation.py
deltakit-explorer/tests/decoding/: test_cloud_decoder.py
deltakit-explorer/tests/logging/: test_logging.py
deltakit-explorer/tests/plotting/: test_plotting.py  test_results_and_plot.py
deltakit-explorer/tests/resources/: error_budget_data.csv
deltakit-explorer/tests/server/: test_api_client.py  test_api_v2_client.py  test_gql_client.py  test_token.py
deltakit-explorer/tests/simulation/: test_simulation.py  test_simulation_branching.py
deltakit-explorer/tests/types/: test_binary_data_type.py  test_converter.py  test_data_string.py  test_decoding_result.py  test_experiment_types.py  test_types.py
deltakit-explorer/tests/unit/: test_stabiliser.py
deltakit-explorer/tests/unit/circuits/: test_tableau_functions.py
deltakit-explorer/tests/unit/codes/: test_bivariate_bicycle_code.py  test_repetition_code.py
deltakit-explorer/tests/unit/css/: test_css_stage.py  test_stabiliser_helper_functions.py
deltakit-explorer/tests/unit/noise_models/: test_noise_parameters.py  test_phenomenological_noise_model.py  test_physical_noise.py  test_sd6_noise.py  test_si1000_noise.py  test_toy_noise_model.py
deltakit-explorer/tests/unit/qpus/: test_native_gate_set.py
deltakit-explorer/tests/utils/: test_auth.py  test_config_file.py  test_data_analysis.py  test_decorators.py  test_utils.py
(+43 files in other folders)
