[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakit-explorer"
version = "0.5.1"
description = "Deltakit (component deltakit-explorer)"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]

authors = [{ name = "Deltakit Team", email = "deltakit@riverlane.com" }]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Typing :: Typed",
]

dependencies = [
  "deltakit-core~=0.5",
  "deltakit-circuit~=0.5",
  "deltakit-decode~=0.5",
  "gql[requests]~=3.5",
  "graphql_core~=3.2",
  "numpy~=2.0",
  "scipy~=1.15",
  "matplotlib~=3.10",
  "stim~=1.11; python_version >= '3.10' and python_version < '3.12'",
  "stim~=1.13; python_version >= '3.12' and python_version < '3.13'",
  "stim~=1.15; python_version >= '3.13'",
  "requests~=2.32",
  "seaborn~=0.12",
  "tqdm~=4.66",
  "galois>=0.4.6,~=0.4",
  # Needed for the moment to have the changes from https://github.com/quantumgizmos/bp_osd/pull/20
  # until a new release including these changes lands on PyPI (https://pypi.org/project/bposd/).
  "bposd @ git+https://github.com/quantumgizmos/bp_osd.git@8894ec654b24ae875c07e5a361dcae9a77d748ce",
  "typing_extensions~=4.0",
  "packaging>=25.0"
]

[project.urls]
Homepage = "https://github.com/Deltakit/deltakit"
Source = "https://github.com/Deltakit/deltakit"
Documentation = "https://deltakit.riverlane.com/"
Issues = "https://github.com/Deltakit/deltakit/issues"
Changelog = "https://github.com/Deltakit/deltakit/releases"

[dependency-groups]
test = [
  "pytest>=9.0",
  "pytest-cov>=7.0",
  "pytest-mock>=3.14",
  "pytest-skip-slow>=0.0.5",
  "pytest-lazy-fixtures>=1.0",
]
stubs = [
  "typing-extensions~=4.0",
  "types-seaborn~=0.12",
  "scipy-stubs~=1.15",
  "types-tqdm~=4.66",
  "types-requests~=2.32",
]
lint = [
  "mypy~=1.17",
  "ruff~=0.14",
  "typos~=1.34",
  "deptry~=0.23",
  { include-group = "stubs" },
]
security = [
  "bandit~=1.8",
  "ochrona~=2.0",
  "pip-audit~=2.7"
]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "security" },
]

[tool.deptry]
known_first_party = ["deltakit_explorer"]

[tool.mypy]
files = "src/**/*.py"
# The below list of disabled checks should eventually be empty.
disable_error_code = "arg-type,assignment,attr-defined,dict-item,index,list-item,misc,operator,override,return-value,union-attr,var-annotated"

[[tool.mypy.overrides]]
module = ["stim"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["bposd.css"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["./tests/"]
